 $Id: ChangeLog,v 1.82 2004/11/26 14:09:45 uehira Exp $

2004-11-26 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* relaym : MF relay.c
	  - check_pno() and read_chfile() brought from relay.c
	  - with host contol but without channel control (option -f)
	  - write host statistics on HUP signal
	  - no packet info option -n
	  - maximize size of receive socket buffer (option -b)
	* relay.c, send_raw.c, send_raw_old.c, sends.c :
	  some systems (exp. Linux), select(2) changes timeout value
	* Version 1.1.48 released.

2004-11-24 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* pick2final, pick2finalb : get owner information from pickfile
	* Version 1.1.47 released.
	
2004-11-17 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* relay : check_pno() and read_chfile() brought from recvt.c 
		with host contol but without channel control (option -f)
		write host statistics on HUP signal
		no packet info option -n
		corrected byte-order of port no. in log
		maximize size of receive socket buffer (option -b)
	* recvt : corrected byte-order of port no. in log

2004-11-13 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* relaym : MacOSX need #include <sys/time.h>
	
2004-11-11 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* relaym : multi destination verson of 'relay'. IPv4 & IPv6 support.
	* Version 1.1.46 released.
	
2004-10-27 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* raw_mon : added daemon mode (raw_mond)
	
2004-10-26 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* recvt : added option -D : daemon mode (recvtd)
	* relay : added option -D : daemon mode (relayd)
	* send_raw : added option -D : daemon mode (send_rawd, ...)
	* Version 1.1.45 released.
	
2004-10-21 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* order : added option -D : daemon mode (orderd)
	* wdiskd   : Daemon mode of wdisk
	* wdisk60d : Daemon mode of wdisk60
	* Version 1.1.44 released.
	
2004-10-20 Tsuruoka Hiroshi <tsuru@eri.u-tokyo.ac.jp>
	* add program of winsimu
	* Version 1.1.43 released.
	