@@ -1,4 +1,4 @@
-/* $Id: win_log.h,v 1.1 2004/11/11 10:50:30 uehira Exp $ */
+/* $Id: win_log.h,v 1.2 2004/11/30 14:16:30 uehira Exp $ */
 
 #ifndef _WIN_LOG_H_
 #define _WIN_LOG_H_
@@ -9,5 +9,6 @@
 
 void write_log(char *);
 void err_sys(char *);
+void end_program(void);
 
 #endif  /* !_WIN_LOG_H_*/
